fix(ui): missing padding of the modal container on mobile

--- a/src/main/frontend/ui.css
+++ b/src/main/frontend/ui.css
@@ -227,12 +227,17 @@ html.is-native-iphone-without-notch
 html.is-mobile {
   .ui__modal {
     @apply bottom-0 inset-x-0 top-20;
+
+    &[label="ls-modal-search"] {
+      .panel-content {
+        padding-bottom: 0;
+      }
+    }
   }
 
   .ui__modal-panel .panel-content {
     width: calc(98vw - 2rem);
     padding-top: 24px;
-    padding-bottom: 0;
   }
 }
 
